# MeshoptimizerWrapper

./: .gitignore  .gitmodules  CMakeLists.txt  MeshoptimizerWrapper.sln  README.md
.github/workflows/: main.yml
MeshOpt/: AssemblyInfo.cpp  GltfCSharpBindings.cpp  GltfCSharpBindings.h  MeshOpt.vcxproj
MeshOpt/meshoptimizer/include/: gltfpack.h
MeshOpt/meshoptimizer/lib/Release/: gltfpacklib.lib  meshoptimizer.lib
MeshOpt/meshoptimizer/lib/cmake/meshoptimizer/: meshoptimizerConfig.cmake  meshoptimizerConfigVersion.cmake  meshoptimizerTargets-debug.cmake  meshoptimizerTargets.cmake
Nuget/: MeshOpt.glTFPack.nuspec  README.md
include/: test.h
src/: test.cpp
